--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
@@ -48,7 +48,7 @@
         <div class="home-page-body">
             <section class="main">
                 <div id="main-wrapper">
-                    <img class="promo-title" alt="win 500$ on your spitball flashcard" src="@Url.CdnContent("~/Images/Site/promo.png")"/>
+                    <img class="promo-title" alt="win 500$ on your spitball flashcard" src="@Url.CdnContent("~/Images/Site/promo.png?v=1")"/>
                     <div class="welcome-text">
                         <div class="uni-logo-wrapper">
                             <div class="sb-logo">
