small design changes

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.css
@@ -180,6 +180,11 @@
   border-radius: 10px;
   overflow: hidden;
 }
+@media (max-width: 600px) {
+  .promo-info-dialog {
+    max-width: calc(100% - 20px);
+  }
+}
 .promo-info-dialog md-toolbar {
   display: block;
   padding: 28px 8px 10px 8px;
@@ -223,12 +228,15 @@
 }
 @media (max-width: 600px) {
   .promo-info-dialog md-toolbar h2 {
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 8px;
   }
 }
 .promo-info-dialog md-dialog-content {
   border-radius: 0 0 10px 10px;
+}
+.promo-info-dialog md-dialog-content::-webkit-scrollbar {
+  width: 4px;
 }
 .promo-info-dialog md-dialog-content .description {
   max-width: 1200px;
@@ -252,7 +260,8 @@
 }
 @media (max-width: 600px) {
   .promo-info-dialog md-dialog-content .description > div {
-    margin-left: 28px;
+    margin-left: 20px;
+    margin-right: 0;
   }
 }
 .promo-info-dialog md-dialog-content .description > div:before {
