--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Promotion.cshtml
@@ -58,9 +58,9 @@
                 </div>
             </section>
             <section class="intro">
-                <button type="button" class="login-option signup toggle main-signup" data-form-action="register">
+                <a href="@Url.RouteUrl("HomePage", new { step = "signup" })" class="login-option signup toggle main-signup" data-form-action="register">
                     Sign Up, It's Free!
-                </button>
+                </a>
                 <div class="text">
                     <h1>Flashcard Launch Contest</h1>
                     <h2>November 28th - December 15th</h2>
