--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.less
@@ -87,7 +87,7 @@ iframe {
     }
 
     position: fixed;
-    z-index: 2;
+    z-index: 11;
     top: 0;
     left: 0;
     right: 0;
@@ -1630,7 +1630,7 @@ iframe {
                         font-weight: bold;
                         margin: 0 auto;
                         display: block;
-                        width: auto;
+                        width: 276px;
                     }
                 }
             }
