--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1002,7 +1002,6 @@
     .md-bar {
         background-color: @textColorLightGrey;
     }
-
 }
 
 .keyboard-menu {
@@ -1031,4 +1030,53 @@
     width: 100%;
     max-width: 100%;
     height: auto;
+}
+
+.promo-ad {
+    width: 100%;
+    max-width: 700px;
+    height: 90px;
+    margin: 0 auto;
+    background: @buttonColorBlue;
+    .displayFlex;
+    .align-items(center);
+    .justifyContet(space-between);
+    padding: 20px 0;
+
+    md-icon {
+        width: 24px;
+        height: 24px;
+        color: #FFCB0B;
+        margin: 0 10px;
+    }
+
+    .text {
+        color: @textColorWhite;
+
+        h1 {
+            margin: 0;
+            font-size: 36px;
+            font-weight: bold;
+        }
+
+        .text-line {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(center);
+            font-size: 20px;
+            margin-top: 8px;
+        }
+    }
+
+    .button .content{
+        background: #ffcb0b;
+        padding: 6px 10px;
+        border-radius: 10px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .text, .button {
+        padding: 0 20px;
+    }
 }
