--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -1204,3 +1204,54 @@
   max-width: 100%;
   height: auto;
 }
+.promo-ad {
+  width: 100%;
+  max-width: 700px;
+  height: 90px;
+  margin: 0 auto;
+  background: #4190b9;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+.promo-ad md-icon {
+  width: 24px;
+  height: 24px;
+  color: #FFCB0B;
+  margin: 0 10px;
+}
+.promo-ad .text {
+  color: #ffffff;
+}
+.promo-ad .text h1 {
+  margin: 0;
+  font-size: 36px;
+  font-weight: bold;
+}
+.promo-ad .text .text-line {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: 8px;
+}
+.promo-ad .button .content {
+  background: #ffcb0b;
+  padding: 6px 10px;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.promo-ad .text,
+.promo-ad .button {
+  padding: 0 20px;
+}
