--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -35,7 +35,7 @@
                 <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
             </div>
         </div>
-        <div multiswitch-when="0" class="promo-ad">
+        @*<div multiswitch-when="0" class="promo-ad">
             <div class="text">
                 <h1>Flashcard Lounch Contest</h1>
                 <div class="text-line">
@@ -47,7 +47,7 @@
             <div class="button">
                 <div class="content">Learn More</div>
             </div>
-        </div>
+        </div>*@
         <button ng-click="app.back(f.backUrl)" class="close-btn">
             <md-icon md-svg-icon="t:close"></md-icon>
         </button>
