--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -35,7 +35,7 @@
                 <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
             </div>
         </div>
-        <div multiswitch-when="0" class="promo-ad">
+        <div multiswitch-when="0" class="promo-ad" ng-click="f.details($event)">
             <div class="text">
                 <h1>Flashcard Lounch Contest</h1>
                 <div class="text-line">
