--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_FlashcardsPromo.cshtml
@@ -23,6 +23,6 @@
                 </div>
             </div>
         </div>
-        <md-icon class="info" md-svg-icon="t:info-bubble" ng-click="lb.details($event)"></md-icon>
+        <md-icon class="info" ga-track-event="['dashboard', 'promo details open']" md-svg-icon="t:info-bubble" ng-click="lb.details($event)"></md-icon>
     </div>
 </div>
