--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
@@ -1,10 +1,15 @@
-﻿<md-dialog class="promo-info-dialog">
+﻿<style>
+    .description div:before{
+        color:{{::dp.colorB}};
+    }
+</style>
+<md-dialog class="promo-info-dialog">
     <md-toolbar ng-style="{'background': '{{::dp.colorA}}'}" >
         <md-button class="close" ng-click="dp.close()">
             <md-icon md-svg-icon="t:close"></md-icon>
         </md-button>
         <h1 ng-style="{'color': '{{::dp.colorB}}'}">Flashcard Lounch Contest</h1>
-        <h2>November 28th - December 15th</h2>
+        <h2 ng-style="{'color': '{{::dp.colorB}}'}">Your chance to win $500</h2>
     </md-toolbar>
     <md-dialog-content>
         <div class="description offset-bottom" ng-style="{'background': '{{::dp.colorA}}'}">
