--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
@@ -22,7 +22,7 @@
             <ul>
                 <li>
                     <div class="icon-wrapper uni" ng-style="{'background': '{{::dp.colorB}}'}"><md-icon class="icon" md-svg-icon="t:universityMenu"></md-icon></div>
-                    <div class="rule">You must be currently enrolled as a student at the University of Michigan</div>
+                    <div class="rule">You must be currently enrolled as a student at the {{::dp.uniName}}</div>
                 </li>
                 <li>
                     <div class="icon-wrapper like" ng-style="{'background': '{{::dp.colorB}}'}"><md-icon class="icon" md-svg-icon="b:like"></md-icon></div>
