Added ad to flashcard main screen

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
@@ -1469,16 +1469,24 @@ iframe {
   min-height: 0;
   height: 100%;
 }
-.promo-page [background-cover] {
+.promo-page .bg-container {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.promo-page .bg-container [background-cover] {
   -ms-filter: blur(2px) brightness(0.4);
   -moz-filter: blur(2px) brightness(0.4);
   -webkit-filter: blur(2px) brightness(0.4);
   filter: blur(2px) brightness(0.4);
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
 }
 .promo-page .promo-img-wrapper {
   position: absolute;
