--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -153,8 +153,7 @@
         .displayFlex;
         .align-items(flex-end);
         .justifyContet(space-between);
-        padding-bottom: 12px;
-
+        //padding-bottom: 12px;
         @media(max-width: 600px) {
             min-height: 80px;
             padding-top: 0;
@@ -164,7 +163,7 @@
             right: 0;
             z-index: 2;
             background: @backgroundColor;
-            padding-bottom: 25px;
+            //padding-bottom: 25px;
         }
 
         .close-btn {
@@ -239,6 +238,7 @@
 
                 @media(max-width: 600px) {
                     padding-right: 50px;
+                    padding-bottom: 25px;
                 }
 
                 .sides {
@@ -329,6 +329,10 @@
                     }
                 }
             }
+        }
+
+        .progress-wrapper, .card-sides, .pinned-counter {
+            padding-bottom: 12px;
         }
 
         .pinned-counter {
@@ -1033,49 +1037,171 @@
 }
 
 .promo-ad {
-    width: 100%;
-    max-width: 700px;
+    width: 700px;
+    max-width: ~"calc(100% - 100px)";
     height: 90px;
     margin: 0 auto;
     background: @buttonColorBlue;
     .displayFlex;
     .align-items(center);
     .justifyContet(space-between);
+    align-self: center;
+    position: relative;
+
+    @media(max-width: 850px) {
+        height: 10.5vw;
+        min-height: 70px;
+    }
 
     md-icon {
         width: 18px;
         height: 18px;
         color: #FFCB0B;
         margin: 0 10px;
+
+        @media(max-width: 850px) {
+            width: 16px;
+            height: 16px;
+            margin: 0 8px;
+        }
+
+        @media(max-width: 530px) {
+            margin: 0 5px;
+            width: 4vw;
+            height: 4vw;
+        }
+    }
+
+    .text, .button {
+        padding-left: 25px;
+
+        @media(max-width: 850px) {
+            padding-left: 3vw;
+        }
     }
 
     .text {
         color: @textColorWhite;
+        flex-grow: 1;
+        text-align: center;
+        padding-right: 146px;
+
+        @media(max-width: 850px) {
+            padding-right: 19vw;
+        }
+
+        @media(max-width: 530px) {
+            padding: 5px;
+            height: 100%;
+        }
 
         h1 {
             margin: 0;
             font-size: 38px;
             font-weight: bold;
+
+            @media(max-width: 850px) {
+                font-size: 4.1vw;
+            }
+
+            @media(max-width: 600px) {
+                display: none;
+            }
         }
 
         .text-line {
-            .displayFlex;
-            .align-items(center);
-            .justifyContet(center);
             font-size: 18px;
-            margin-top: 2px;
+
+            @media(min-width: 600px) {
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(center);
+            }
+
+            @media(max-width: 850px) {
+                font-size: 2.5vw;
+            }
+
+            @media(max-width: 600px) {
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(center);
+                font-size: 2.75vw;
+            }
+
+            @media(max-width: 530px) {
+                flex-direction: column;
+                margin: 0;
+                .justifyContet(space-around);
+                height: 100%;
+            }
+
+            .start {
+                @media(max-width: 530px) {
+                    font-weight: bold;
+                    font-size: 5.3vw;
+                    line-height: normal;
+                }
+            }
+
+            .end {
+                @media(max-width: 530px) {
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
+                }
+            }
+
+            .share {
+                display: inline-block;
+                line-height: normal;
+
+                @media(max-width: 530px) {
+                    font-size: 4vw;
+                }
+            }
         }
     }
 
-    .button .content {
-        background: #ffcb0b;
-        padding: 8px 14px;
-        border-radius: 10px;
-        font-size: 16px;
-        font-weight: bold;
-    }
+    .button {
+        padding-right: 25px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        .displayFlex;
+        .align-items(center);
 
-    .text, .button {
-        padding: 0 25px;
+        @media(max-width: 850px) {
+            padding-right: 3vw;
+        }
+
+        @media(max-width: 530px) {
+            position: static;
+            padding: 0 1.5vw;
+        }
+
+        .content {
+            color: @textColorBlack;
+            background: #ffcb0b;
+            padding: 8px 14px;
+            border-radius: 10px;
+            font-size: 16px;
+            font-weight: bold;
+            white-space: nowrap;
+
+            @media(max-width: 850px) {
+                font-size: 2.1vw;
+                padding: 0.8vw 1.5vw;
+                border-radius: 1.2vw;
+            }
+
+            @media(max-width: 530px) {
+                padding: 5px 6px;
+                border-radius: 10px;
+                font-size: 3.5vw;
+                line-height: normal;
+            }
+        }
     }
 }
