--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -861,19 +861,51 @@
   left: 0;
   margin: 0 auto;
   color: #888b8e;
+  font-size: 16px;
+}
+@media (max-width: 600px) {
+  .flashcardPage .cards-info .like-wrapper {
+    font-size: 14px;
+  }
+}
+.flashcardPage .cards-info .like-wrapper span {
+  font-weight: bold;
 }
 .flashcardPage .cards-info .like-wrapper md-icon {
   width: 20px;
-  height: 20px;
+  height: 21px;
   fill: #888b8e;
-  margin-bottom: 7px;
+  margin-bottom: 2px;
   margin-left: 5px;
 }
+@media (max-width: 600px) {
+  .flashcardPage .cards-info .like-wrapper md-icon {
+    width: 18px;
+    height: 18px;
+  }
+}
 .flashcardPage .cards-info .like-wrapper .liked {
-  color: #4190b9;
+  background: #4190b9;
+  color: #ffffff;
+  border-color: #4190b9;
 }
 .flashcardPage .cards-info .like-wrapper .liked md-icon {
-  fill: #4190b9;
+  fill: #ffffff;
+}
+.flashcardPage .cards-info .like-wrapper button {
+  border: 1px solid #888b8e;
+  border-radius: 5px;
+  margin-right: 10px;
+  padding: 0 10px;
+}
+@media (max-width: 600px) {
+  .flashcardPage .cards-info .like-wrapper button {
+    padding: 0 6px;
+    margin-right: 4px;
+  }
+}
+.flashcardPage .cards-info .like-wrapper button > div {
+  margin-top: 2px;
 }
 .flashcardPage .cards-info .like-wrapper,
 .flashcardPage .cards-info .like-wrapper button > div {
