--- a/Zbang.Cloudents.Mvc4WebRole/Views/Share/ShareDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Share/ShareDialog.cshtml
@@ -10,7 +10,7 @@
         <div>
             <button type="button" ng-click="sd.twitter()">Twitter</button>
             <button type="button" ng-click="sd.facebook()">Facebook</button>
-            <button type="button" ng-click="sd.whatapp()">Whatsapp</button>
+            <button type="button" ng-click="sd.whatsapp()">Whatsapp</button>
         </div>
         <hr />
         <span>Copy this short url to share</span>
