--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1237,3 +1237,138 @@
         }
     }
 }
+
+.share-dialog {
+    @dialogPadding: 24px;
+    @dialogPaddingMobile: 14px;
+    width: ~"calc(100% - 20px)";
+    max-width: 520px;
+    border-radius: 10px;
+    background: @buttonColorBlue;
+
+    @media(max-width: 600px) {
+        max-height: ~"calc(100% - 20px)";
+    }
+
+
+    md-toolbar {
+        .displayFlex;
+        flex-direction: row;
+        .align-items(center);
+        .justifyContet(space-between);
+        padding: 0 @dialogPadding;
+        border-radius: 10px 10px 0 0;
+
+        @media(max-width: 600px) {
+            padding: 0 @dialogPaddingMobile;
+        }
+
+        h1 {
+            margin: 0;
+            color: @textColorWhite;
+            font-weight: bold;
+
+            @media(max-width: 600px) {
+                font-size: 20px;
+            }
+        }
+
+        .close {
+            min-width: 0;
+            padding: 4px;
+            line-height: 0;
+            min-height: 0;
+            margin: 0;
+        }
+    }
+
+    md-dialog-content {
+        padding: @dialogPadding;
+        background: @textColorWhite;
+        font-size: 16px;
+        line-height: normal;
+        border-radius: 0 0 10px 10px;
+
+        @media(max-width: 600px) {
+            padding: @dialogPaddingMobile;
+        }
+
+        .share-options {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(space-between);
+            flex-wrap: wrap;
+
+            button {
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(center);
+                border: 1px solid @textColorBlack;
+                height: 60px;
+                margin: 10px 0;
+                width: 100%;
+                max-width: ~"calc(50% - @{dialogPadding})";
+                font-size: 22px;
+
+                @media(max-width: 600px) {
+                    font-size: 16px;
+                    max-width: 100%;
+                    height: 40px;
+                    .justifyContet(flex-start);
+                    padding-left: ~"calc(50% - 56px)";
+                }
+
+                md-icon {
+                    width: 34px;
+                    height: 34px;
+                    margin-right: 8px;
+
+                    @media(max-width: 600px) {
+                        width: 24px;
+                        height: 24px;
+                    }
+                }
+
+                &.twitter {
+                    md-icon {
+                        fill: #1DA1F2;
+                    }
+                }
+
+                &.whatsapp {
+                    @media(min-width: 600px) {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        hr {
+            border-top-color: @textColorLightGrey;
+            margin: 40px -8px;
+
+            @media(max-width: 600px) {
+                margin: 24px -8px;
+            }
+        }
+
+        #shareUrl {
+            display: block;
+            width: 100%;
+            border: 1px solid @textColorBlack;
+            height: 40px;
+            padding: 0 18px;
+            font-size: 18px;
+            margin: 20px 0;
+
+            @media(max-width: 600px) {
+                margin: 14px 0;
+            }
+        }
+
+        .action-btn {
+            margin: 0 auto 10px auto;
+            display: block;
+        }
+    }
+}
