Share on flashcard.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -117,6 +117,7 @@
                     </div>
                 </button>
             </div>
+            <div ng-if="f.step==2" ng-click="f.share()">share</div>
         </div>
     </div>
     <div multiswitch-when="1" class="card-player angular-animate" card-scroll>
