Final design fixes for flashcard share dialog

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/_Promo.cshtml
@@ -8,7 +8,7 @@
         <md-button class="close" ng-click="dp.close()">
             <md-icon md-svg-icon="t:close"></md-icon>
         </md-button>
-        <h1 ng-style="{'color': '{{::dp.colorB}}'}">Flashcard Lounch Contest</h1>
+        <h1 ng-style="{'color': '{{::dp.colorB}}'}">Flashcard Launch Contest</h1>
         <h2 ng-style="{'color': '{{::dp.colorB}}'}">Your chance to win $500</h2>
     </md-toolbar>
     <md-dialog-content>
