--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1267,6 +1267,7 @@
             margin: 0;
             color: @textColorWhite;
             font-weight: bold;
+            font-size: 30px;
 
             @media(max-width: 600px) {
                 font-size: 20px;
@@ -1304,23 +1305,24 @@
                 .align-items(center);
                 .justifyContet(center);
                 border: 1px solid @textColorBlack;
-                height: 60px;
-                margin: 10px 0;
+                height: 50px;
+                margin: 14px 0;
                 width: 100%;
                 max-width: ~"calc(50% - @{dialogPadding})";
-                font-size: 22px;
+                font-size: 20px;
 
                 @media(max-width: 600px) {
                     font-size: 16px;
                     max-width: 100%;
                     height: 40px;
+                    margin: 8px 0;
                     .justifyContet(flex-start);
                     padding-left: ~"calc(50% - 56px)";
                 }
 
                 md-icon {
-                    width: 34px;
-                    height: 34px;
+                    width: 30px;
+                    height: 30px;
                     margin-right: 8px;
 
                     @media(max-width: 600px) {
@@ -1339,13 +1341,24 @@
                     @media(min-width: 600px) {
                         display: none;
                     }
+
+                    md-icon {
+                        width: 29px;
+                        height: 29px;
+                        margin-left: -3px;
+                        margin-right: 6px;
+                    }
+                }
+
+                &:hover {
+                    background: @buttonColorCancelHover;
                 }
             }
         }
 
         hr {
             border-top-color: @textColorLightGrey;
-            margin: 40px -8px;
+            margin: 26px -8px 36px -8px;
 
             @media(max-width: 600px) {
                 margin: 24px -8px;
@@ -1363,11 +1376,12 @@
 
             @media(max-width: 600px) {
                 margin: 14px 0;
+                font-size: 16px;
             }
         }
 
         .action-btn {
-            margin: 0 auto 10px auto;
+            margin: 0 auto;
             display: block;
         }
     }
