--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -1470,6 +1470,7 @@
   margin: 0;
   color: #ffffff;
   font-weight: bold;
+  font-size: 30px;
 }
 @media (max-width: 600px) {
   .share-dialog md-toolbar h1 {
@@ -1514,25 +1515,26 @@
   -webkit-justify-content: center;
   justify-content: center;
   border: 1px solid #212325;
-  height: 60px;
-  margin: 10px 0;
+  height: 50px;
+  margin: 14px 0;
   width: 100%;
   max-width: calc(50% - 24px);
-  font-size: 22px;
+  font-size: 20px;
 }
 @media (max-width: 600px) {
   .share-dialog md-dialog-content .share-options button {
     font-size: 16px;
     max-width: 100%;
     height: 40px;
+    margin: 8px 0;
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
     padding-right: calc(50% - 56px);
   }
 }
 .share-dialog md-dialog-content .share-options button md-icon {
-  width: 34px;
-  height: 34px;
+  width: 30px;
+  height: 30px;
   margin-left: 8px;
 }
 @media (max-width: 600px) {
@@ -1549,9 +1551,18 @@
     display: none;
   }
 }
+.share-dialog md-dialog-content .share-options button.whatsapp md-icon {
+  width: 29px;
+  height: 29px;
+  margin-right: -3px;
+  margin-left: 6px;
+}
+.share-dialog md-dialog-content .share-options button:hover {
+  background: #f0f0f0;
+}
 .share-dialog md-dialog-content hr {
   border-top-color: #c3c3c3;
-  margin: 40px -8px;
+  margin: 26px -8px 36px -8px;
 }
 @media (max-width: 600px) {
   .share-dialog md-dialog-content hr {
@@ -1570,9 +1581,10 @@
 @media (max-width: 600px) {
   .share-dialog md-dialog-content #shareUrl {
     margin: 14px 0;
+    font-size: 16px;
   }
 }
 .share-dialog md-dialog-content .action-btn {
-  margin: 0 auto 10px auto;
+  margin: 0 auto;
   display: block;
 }
